New Hero Section

--- a/index.html
+++ b/index.html
@@ -201,10 +201,16 @@
                     </div>
                   </div>
                 </div>
+                
               </div>
             </div>
           </div>
+          <div class="mouse-helper">
+            <i class="fa-solid fa-computer-mouse scroll-mouse"></i>
+            <span>Scroll Down</span>
+          </div>
         </div>
+        
         <!--Services-->
         <!--Section-->
         <div
